--- a/src/login/systemd-user.in
+++ b/src/login/systemd-user.in
@@ -7,7 +7,7 @@
 -account sufficient pam_systemd_home.so
 {% endif %}
 account  sufficient pam_unix.so no_pass_expiry
-account  required   pam_permit.so
+account  include    system-auth
 
 {% if HAVE_SELINUX %}
 session  required   pam_selinux.so close
@@ -20,4 +20,4 @@ session  required   pam_namespace.so
 -session optional   pam_systemd_home.so
 {% endif %}
 session  optional   pam_umask.so silent
-session  optional   pam_systemd.so
+session  include    system-auth
