--- a/rules.d/meson.build
+++ b/rules.d/meson.build
@@ -5,7 +5,10 @@ install_data(
         install_dir : udevrulesdir)
 
 rules = [
-        [files('60-autosuspend.rules',
+        [files('40-redhat-hotplug.rules',
+               '40-redhat-s390.rules',
+               '40-redhat.rules',
+               '60-autosuspend.rules',
                '60-block.rules',
                '60-cdrom_id.rules',
                '60-dmi-id.rules',
