nspawn: move uid shift/chown() code into shared/
(cherry picked from commit b1fb2d971c810e0bdf9ff0ae567a1c6c230e4e5d)

Related: RHEL-143036

--- a/src/test/meson.build
+++ b/src/test/meson.build
@@ -387,6 +387,11 @@ executables += [
                 'dependencies' : libm,
         },
         test_template + {
+                'sources' : files('test-shift-uid.c'),
+                'dependencies' : libacl,
+                'type' : 'manual',
+        },
+        test_template + {
                 'sources' : files('test-process-util.c'),
                 'dependencies' : threads,
         },
