--- a/src/udev/meson.build
+++ b/src/udev/meson.build
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: LGPL-2.1-or-later
 
 udevadm_sources = files(
+        'udevadm-cat.c',
         'udevadm-control.c',
         'udevadm-hwdb.c',
         'udevadm-info.c',
