udev-dump: split out dump_event() from udevadm-test.c
(cherry picked from commit 91d9f8f834354a0d541a94e65e389309e32cba9d)

Resolves: RHEL-75774

--- a/src/udev/meson.build
+++ b/src/udev/meson.build
@@ -31,6 +31,7 @@ libudevd_core_sources = files(
         'udev-builtin.c',
         'udev-config.c',
         'udev-ctrl.c',
+        'udev-dump.c',
         'udev-event.c',
         'udev-format.c',
         'udev-manager.c',
