test: limit logging when running TEST-21-DFUZZER
To speed things up.

rhel-only: ci
Related: RHEL-79976

--- a/test/TEST-21-DFUZZER/meson.build
+++ b/test/TEST-21-DFUZZER/meson.build
@@ -6,5 +6,6 @@ integration_tests += [
                 'timeout' : 3600,
                 'priority' : 50,
                 'vm' : true,
+                'cmdline' : integration_test_template['cmdline'] + ['systemd.log_level=info'],
         },
 ]
