mkosi: install test dependencies for EnterNamespace= test
The test for the EnterNamespace= feature [0] has been both broken and
disabled since the migration to the mkosi framework, as it's missing the
libdw.pc file for pkg-config, so the test is skipped completely, and
it's also missing gcc to actually build the test binary.

[0] Part of TEST-87-AUX-UTILS-VM.coredump.sh

(cherry picked from commit 4d8e8d44ab3f6f99102faf0dcb53ca4de4d517ae)

Related: RHEL-113920

--- a/mkosi.conf.d/10-arch/mkosi.conf
+++ b/mkosi.conf.d/10-arch/mkosi.conf
@@ -21,6 +21,7 @@ Packages=
         dbus-broker
         dbus-broker-units
         dhcp
+        elfutils
         erofs-utils
         f2fs-tools
         git
@@ -38,6 +39,7 @@ Packages=
         openssl
         pacman
         perf
+        pkgconf
         polkit
         procps-ng
         psmisc
