--- a/mkosi.conf.d/10-centos-fedora/mkosi.conf
+++ b/mkosi.conf.d/10-centos-fedora/mkosi.conf
@@ -26,6 +26,8 @@ Packages=
         device-mapper-event
         device-mapper-multipath
         dnf
+        elfutils-devel
+        elfutils-libs
         git-core
         glibc-langpack-de
         glibc-langpack-en
@@ -45,6 +47,7 @@ Packages=
         pam
         passwd
         perf
+        pkgconf
         policycoreutils
         polkit
         procps-ng
