--- a/mkosi.conf.d/10-opensuse/mkosi.conf
+++ b/mkosi.conf.d/10-opensuse/mkosi.conf
@@ -52,6 +52,8 @@ Packages=
         kernel-default
         kmod
         knot
+        libdw-devel
+        libdw1
         multipath-tools
         ncat
         open-iscsi
@@ -60,6 +62,7 @@ Packages=
         pam
         patterns-base-minimal_base
         perf
+        pkgconf
         procps4
         psmisc
         python3-pefile
