--- a/mkosi.conf.d/10-debian-ubuntu/mkosi.conf
+++ b/mkosi.conf.d/10-debian-ubuntu/mkosi.conf
@@ -54,6 +54,8 @@ Packages=
         isc-dhcp-server
         knot
         libcap-ng-utils
+        libdw-dev
+        libdw1
         locales
         login
         man-db
@@ -64,6 +66,7 @@ Packages=
         openssh-server
         passwd
         polkitd
+        pkgconf
         procps
         psmisc
         python3-pexpect
